Change canvas border and background colors to gray

--- a/walking.css
+++ b/walking.css
@@ -1,4 +1,4 @@
 canvas {
-    border: 1px solid #d3d3d3;
-    background-color: darkkhaki;
+    border: 1px solid #757575;
+    background-color: #ececec;
 }
