--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #f5f5f6;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +11,71 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+canvas {
+    border: 1px solid #757575;
+    background-color: #ececec;
+}
+
+h1 {
+    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.regularsize {
+    width:  640px;
+    height: 400px;
+}
+
+#introtext {
+    width: 777px;
+    border: 1px dashed #fdfefd;
+    padding-bottom: 12px;
+    background-color: #ffffff;
+    margin-bottom: 4em;
+    margin-top: auto;
+}
+
+#introtext > p {
+    text-align: center;
+    padding-left: 3%;
+    padding-right: 2%;
+    font-size: large;
+}
+
+.container {
+    display: flex;
+    /*flex-direction: column; */
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.solocontainer {
+    display: flex;
+    flex-direction: row; 
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+#gamecontrols {
+    border: 1px solid #757575;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
+    align-content: left;
+}
+#gamecontrols > * {
+    padding: 5px;
+}
+
+.placeholder {
+    background-color: #a7e7e7;
+    border: 1px solid red;
 }
