--- a/src/index.css
+++ b/src/index.css
@@ -63,13 +63,13 @@ h1 {
 }
 
 #gamecontrols {
+    min-width: 250px;
+    min-height: 140px;
     border: 1px solid #757575;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: left;
-    align-items: left;
-    align-content: left;
 }
 #gamecontrols > * {
     padding: 5px;
