--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,9 @@ h1 {
 #introtext {
     width: 777px;
     border: 1px dashed #fdfefd;
+    border-radius: 5px;
     padding-bottom: 12px;
-    background-color: #ffffff;
+    background-image: radial-gradient(#ffffff, #f5f5f6);
     margin-bottom: 4em;
     margin-top: auto;
 }
@@ -46,7 +47,6 @@ h1 {
 
 .container {
     display: flex;
-    /*flex-direction: column; */
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -63,13 +63,13 @@ h1 {
 }
 
 #gamecontrols {
+    border-radius: 5px;
     min-width: 250px;
     min-height: 140px;
     border: 1px solid #757575;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: left;
 }
 #gamecontrols > * {
     padding: 5px;
@@ -77,5 +77,6 @@ h1 {
 
 .placeholder {
     background-color: #a7e7e7;
+    border-radius: 20px;
     border: 1px solid red;
 }
