--- a/src/index.css
+++ b/src/index.css
@@ -29,12 +29,11 @@ h1 {
 }
 
 #introtext {
-    width: 777px;
+    max-width: 777px;
     border: 1px dashed #fdfefd;
     border-radius: 5px;
-    padding-bottom: 12px;
     background-image: radial-gradient(#ffffff, #f5f5f6);
-    margin-bottom: 4em;
+    margin-bottom: 1em;
     margin-top: auto;
 }
 
@@ -54,6 +53,7 @@ h1 {
 }
 
 .solocontainer {
+    padding-bottom: 15px;
     display: flex;
     flex-direction: row; 
     flex-wrap: wrap;
@@ -79,4 +79,9 @@ h1 {
     background-color: #a7e7e7;
     border-radius: 20px;
     border: 1px solid red;
+}
+
+.textcontent {
+    max-width: 777px;
+    text-align: left;
 }
